轮播组件开发

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,6 +3,7 @@
     "pages/index/index",
     "pages/component/component",
     "pages/components/poster/poster",
+    "pages/components/carousel/carousel",
     "pages/template/template",
     "pages/demo/demo",
     "pages/demos/mall/mall",
