--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,6 +4,7 @@
     "pages/component/component",
     "pages/components/poster/poster",
     "pages/components/carousel/carousel",
+    "pages/components/textBanner/textBanner",
     "pages/template/template",
     "pages/demo/demo",
     "pages/demos/mall/mall",
