--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -5,6 +5,7 @@
     "pages/components/poster/poster",
     "pages/components/carousel/carousel",
     "pages/components/textBanner/textBanner",
+    "pages/components/table/table",
     "pages/template/template",
     "pages/demo/demo",
     "pages/demos/mall/mall",
