排序组件开发

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,6 +6,7 @@
     "pages/components/carousel/carousel",
     "pages/components/textBanner/textBanner",
     "pages/components/table/table",
+    "pages/components/sort/sort",
     "pages/template/template",
     "pages/demo/demo",
     "pages/demos/mall/mall",
