--- a/project.config.json
+++ b/project.config.json
@@ -3,14 +3,14 @@
   "cloudfunctionRoot": "cloudfunctions/",
   "setting": {
     "urlCheck": true,
-    "es6": false,
+    "es6": true,
     "enhance": true,
     "postcss": true,
     "preloadBackgroundData": false,
     "minified": true,
     "newFeature": true,
     "coverView": true,
-    "nodeModules": false,
+    "nodeModules": true,
     "autoAudits": false,
     "showShadowRootInWxmlPanel": true,
     "scopeDataCheck": false,
@@ -34,7 +34,7 @@
   },
   "appid": "wx531afe87c91b8125",
   "projectname": "DevelopLab",
-  "libVersion": "2.11.2",
+  "libVersion": "2.13.2",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "cloudfunctionTemplateRoot": "cloudfunctionTemplate",
@@ -83,8 +83,8 @@
         },
         {
           "id": 3,
-          "name": "pages/components/sort/sort",
-          "pathName": "pages/components/sort/sort",
+          "name": "pages/demos/lottie/lottie",
+          "pathName": "pages/demos/lottie/lottie",
           "query": "",
           "scene": null
         }
