分享弹窗组件开发

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,6 +7,7 @@
     "pages/components/textBanner/textBanner",
     "pages/components/table/table",
     "pages/components/sort/sort",
+    "pages/components/share/share",
     "pages/template/template",
     "pages/demo/demo",
     "pages/demos/mall/mall",
