--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,6 +8,7 @@
     "pages/components/table/table",
     "pages/components/sort/sort",
     "pages/components/share/share",
+    "pages/components/search/search",
     "pages/template/template",
     "pages/demo/demo",
     "pages/demos/mall/mall",
