--- a/project.config.json
+++ b/project.config.json
@@ -73,7 +73,7 @@
         {
           "name": "pages/templateDetail/templateDetail",
           "pathName": "pages/templateDetail/templateDetail",
-          "query": "template=orderItem",
+          "query": "template=cartItem1_cartItem2",
           "scene": null
         }
       ]
